2018-01-19  Alex Tutubalin <lexa@lexa.ru>
Secunia #79000: 
Credit: Laurent Delosieres, Secunia Research at Flexera
 * All legacy (RGB raw) image loaders checks for imgdata.image is not NULL
 * kodak_radc_load_raw: check image size before processing
 * legacy memory allocator: allocate max(widh,raw_width)*max(height,raw_height)
 * LibRaw 0.18.7


2017-12-06  Alex Tutubalin <lexa@lexa.ru>
Secunia #76000:
 * Fixed fuji_width handling if file is neither fuji nor DNG
 * Fixed xtrans interpolate for broken xtrans pattern
 * Fixed panasonic decoder
 * LibRaw 0.18.6

2017-09-22  Alex Tutubalin <lexa@lexa.ru>
 * Fixed possible out of bound access in Kodak 6500 loader
 * LibRaw 0.18.5

2017-09-12  Alex Tutubalin <lexa@lexa.ru>
 * CVE-2017-14348: Fix for possible heap overrun in Canon makernotes parser
   Credit: Henri Salo from Nixu Corporation
 * LibRaw 0.18.4

2017-09-09  Alex Tutubalin <lexa@lexa.ru>
 * Fix for CVE-2017-13735
 * CVE-2017-14265: Additional check for X-Trans CFA pattern data
 * LibRaw 0.18.3

2017-03-08  Alex Tutubalin <lexa@lexa.ru>
 * Fixed several errors (Secunia advisory SA75000)
 * ACES colorspace output option included in dcraw_emu help page
 * Avoided possible 32-bit overflows in Sony metadata parser
 * Phase One flat field code called even for half-s
 * LibRaw 0.18.2

2017-02-12  Alex Tutubalin <lexa@lexa.ru>
 * Camera Support: Sigma Quatto H
 * Fixed bug in FujiExpoMidPointShift parser
 * Fixed wrong black level in Sony A350
 * Added standard integer types for VisualStudio 2008 and earlier
 * LibRaw 0.18.1
 
2016-12-27  Alex Tutubalin <lexa@lexa.ru>
 * Licensing changes:
    - there is no 'LibRaw Software License 27032010' licensing anymore (and all signed
      agreements have expired)
    - LibRaw is now dual-licensed: LGPL 2.1 or CDDL 1.0

 * Camera support (+87):
     Apple: iPad Pro, iPhone SE, iPhone 6s, iPhone 6 plus, iPhone 7, iPhone 7 plus
     BlackMagic Micro Cinema Camera, URSA, URSA Mini